{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 158,
  "lineage": "6c880da0-aa25-a3ce-7428-2b81b92cda65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363128713288:internet-gateway/igw-0df6d7a9e27f22519",
            "id": "igw-0df6d7a9e27f22519",
            "owner_id": "363128713288",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0eeffe0e173afd94b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05ea2119a2a2c6279",
            "owner_id": "363128713288",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df6d7a9e27f22519",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df6d7a9e27f22519",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table"
            },
            "vpc_id": "vpc-0eeffe0e173afd94b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cd876c777ad59b04",
            "owner_id": "363128713288",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df6d7a9e27f22519",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df6d7a9e27f22519",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_2"
            },
            "vpc_id": "vpc-0eeffe0e173afd94b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa2b5f6d405becb2",
            "route_table_id": "rtb-05ea2119a2a2c6279",
            "subnet_id": "subnet-00fe108dc498d233d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_1",
            "aws_subnet.subnet_1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c86050e0fbcade89",
            "route_table_id": "rtb-0cd876c777ad59b04",
            "subnet_id": "subnet-037b4001da625ceb6"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_2",
            "aws_subnet.subnet_2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363128713288:subnet/subnet-00fe108dc498d233d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00fe108dc498d233d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363128713288",
            "tags": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0eeffe0e173afd94b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363128713288:subnet/subnet-037b4001da625ceb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-037b4001da625ceb6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "363128713288",
            "tags": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0eeffe0e173afd94b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363128713288:vpc/vpc-0eeffe0e173afd94b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02fa498ca8e2f5229",
            "default_route_table_id": "rtb-03b4e32a64af3fb97",
            "default_security_group_id": "sg-0a07173cb4e9a96c6",
            "dhcp_options_id": "dopt-f2118e99",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0eeffe0e173afd94b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03b4e32a64af3fb97",
            "owner_id": "363128713288",
            "tags": {
              "Name": "production-vpc"
            }
          }
        }
      ]
    }
  ]
}